--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "jquery-mask-plugin": "^1.14.16",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
     "@types/jquery-mask-plugin": "^1.14.6",
