--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.7.1",
     "jquery-mask-plugin": "^1.14.16",
     "moment": "^2.30.1",
+    "pdfmake": "^0.2.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "sweetalert2": "^11.12.1"
