--- a/package.json
+++ b/package.json
@@ -26,15 +26,20 @@
     "sweetalert2": "^11.12.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.9.0",
     "@types/jquery-mask-plugin": "^1.14.6",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "eslint-plugin-vue": "^9.27.0",
     "gh-pages": "^6.1.1",
+    "globals": "^15.9.0",
     "vite": "^5.2.0"
   }
 }
