--- a/.github/test.yml
+++ b/.github/test.yml
@@ -34,5 +34,14 @@ jobs:
       - name: Run Cypress Tests
         uses: cypress-io/github-action@v5
         with:
-          start: npm run start # comando para iniciar o Cypress
+          start: npm run cy:run # comando para iniciar o Cypress
           wait-on: ${{ steps.deploy-to-surge.outputs.preview_url }} 
+      
+      - name: Merge Pull Request (apenas se os testes passarem)
+        if: github.event_name == 'pull_request' && github.actor == 'dependabot[bot]' && job.status == 'success'
+        uses: pascalgn/automerge-action@v0.15.3
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+        with:
+          pull_request: "${{ github.event.pull_request.number }}"
+          merge_method: "merge"
