--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pdfmake": "^0.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.1",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
