--- a/package.json
+++ b/package.json
@@ -11,10 +11,7 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "cy:open": "cypress open",
-    "cy:run": "cypress run",
-    "cy:chrome": "cypress run -b chrome",
-    "cy:firefox": "cypress run -b firefox"
+    "test": "vitest"
   },
   "dependencies": {
     "@emotion/react": "^11.13.5",
@@ -36,7 +33,6 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
-    "cypress": "^13.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.37.2",
