--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recibos-psi",
   "homepage": "https://gabriersdev.github.io/recibos-psi",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "predeploy": "npm run build",
@@ -27,6 +27,7 @@
     "pdfmake": "^0.2.14",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.6.1",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
